--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@
 }
 
 :root {
-    /* --default-width: 1200px; */
     --default-font-weight: 600;
     --default-letter-spacing: .1rem;
     --transition: all .14s ease-in;
@@ -35,7 +34,6 @@ body {
 }
 
 .container {
-    /* max-width: var(--default-width); */
     margin: 0 auto;
 }
 
@@ -45,7 +43,6 @@ body {
     border-radius: 1rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-    /* glassmorphism style */
     backdrop-filter: blur(17px) saturate(200%);
     -webkit-backdrop-filter: blur(17px) saturate(200%);
     background-color: rgba(255, 255, 255, 0.3);
@@ -161,7 +158,7 @@ body {
 }
 
 .about-component .desc p {
-    font-size: var(--default-font-size);
+    font-size: .9rem;
     line-height: 1.6rem;
     text-align: center;
 }
@@ -492,7 +489,7 @@ body {
 @media screen and (max-width: 1920px) {
 
     .about-component .desc p {
-        font-size: 2rem;
+        font-size: 1.6rem;
         line-height: 40px;
     }
 
@@ -537,7 +534,7 @@ body {
     }
 
     .about-component .desc p {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     .projects {
